--- a/lib/sport_hub_web/templates/layout/root.html.leex
+++ b/lib/sport_hub_web/templates/layout/root.html.leex
@@ -27,7 +27,7 @@
           <div class="sidebar-sticky flex-column w-100 mt-1">
             <ul class="nav flex-column">
               <li class="nav-item">
-                  <a class="nav-link active" href="#">
+                  <a class="nav-link active" href="/">
                       <span data-feather="home"></span> Dashboard <span class="sr-only">(current)</span>
                   </a>
               </li>
@@ -37,7 +37,7 @@
                   </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">
+                  <a class="nav-link" href="/import">
                       <span data-feather="file"></span> Import Data
                   </a>
               </li>
